--- a/src/App.scss
+++ b/src/App.scss
@@ -32,8 +32,13 @@ h1 {
 form {
   @include flex-center;
   height: 50px;
-  max-width: 100%;
-  .search-bar {
+  width: 100%;
+  .input-bar.add {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .input-bar.edit {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -50,6 +55,9 @@ form {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
       rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
       rgba(0, 0, 0, 0.2) 0px -2px 0px inset;
+  }
+  .input-bar.edit input {
+    width: 100%;
   }
   button {
     all: unset;
@@ -76,7 +84,15 @@ form {
       width: 100%;
       height: 60%;
       color: #57db48;
-      text-shadow: 6px 6px 2px #fff;
+    }
+    &:active > .fa-pen {
+      height: 50%;
+    }
+    .fa-pen {
+      transition: 100ms;
+      width: 100%;
+      height: 60%;
+      color: gold;
     }
   }
 }
@@ -108,7 +124,6 @@ form {
   border: 1px solid #1f1f1f;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -2px 0px inset;
-  // transition: 0.2s ease-in-out;
   &__icons {
     cursor: pointer;
     display: flex;
