adds copyright footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -141,3 +141,10 @@ form {
     margin-top: 5px;
   }
 }
+
+#copyright {
+  width: 100%;
+  display: block;
+  text-align: center;
+  font-weight: 600;
+}
