--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 3rem;
   margin-bottom: 1rem;
   letter-spacing: 1px;
   text-align: center;
@@ -31,7 +31,7 @@ h1 {
 
 form {
   @include flex-center;
-  height: 50px;
+  height: 3.5rem;
   width: 100%;
   .input-bar.add {
     display: flex;
@@ -63,7 +63,7 @@ form {
     all: unset;
     transition: 150ms;
     cursor: pointer;
-    width: 50px;
+    width: 3.5rem;
     padding: 5px;
     color: #000;
     background: #808080;
@@ -113,7 +113,7 @@ form {
 }
 
 .todo-row {
-  font-size: 24px;
+  font-size: 1.5rem;
   display: flex;
   justify-content: space-between;
   margin: 1rem 0 0;
@@ -147,4 +147,11 @@ form {
   display: block;
   text-align: center;
   font-weight: 600;
+}
+
+/** Media Queries **/
+@media only screen and(max-width: 600px) {
+  html {
+    font-size: 12px;
+  }
 }
